completed delete rpcs
